<resources>
    <string name="default_port" translatable="false">4242</string>
    <string name="title_lag">%1$s%2$s</string>
    <string name="unit_milliseconds">ms</string>
    <string name="unit_seconds">s</string>
    <string name="has_focus">hasfocus</string>
    <string name="app_name">Quasseldroid</string>
    <string name="app_description">An Android-based client for the decentralized Quassel IRC client.</string>
    <string name="app_description_long">Quassel is a distributed, decentralized IRC client, written using C++ and Qt. QuasselDroid is a pure-java client for the Quassel core, allowing you to connect to your Quassel core using your Android (TM) phone.</string>
    <string name="app_links_github" translatable="false">GitHub:\nhttps://github.com/sandsmark/QuasselDroid</string>
    <string name="app_links_community" translatable="false">Beta Builds:\nhttps://plus.google.com/communities/104094956084217666662</string>
    <string name="action_about">About</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_manage_cores">Manage cores</string>
    <string name="action_join_channel">Join Channel</string>
    <string name="action_hide_events">Hide Events</string>
    <string name="action_unhide">Make Visible</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_join">Join</string>
    <string name="action_part">Part</string>
    <string name="action_delete">Delete</string>
    <string name="action_core_add">Add core</string>
    <string name="action_core_edit">Edit core</string>
    <string name="action_core_delete">Delete core</string>
    <string name="action_hidden_display">Show hidden Buffers</string>
    <string name="action_hidden_hide">Hide hidden Buffers</string>
    <string name="action_hide_temp">Hide Temporarily</string>
    <string name="action_hide_perm">Hide Permanently</string>
    <string name="title_login">Login</string>
    <string name="title_loading">Loading…</string>
    <string name="title_authors">Authors</string>
    <string name="title_links">Links</string>
    <string name="title_quasseldroid_logo" translatable="false">uasseldroid</string>
    <string name="hint_join_channel">Channel</string>
    <string name="hint_join_network">Network</string>
    <string name="hint_autocomplete">Autocomplete button</string>
    <string name="hint_status">Status</string>
    <string name="hint_topic">Enter a topic for the channel</string>
    <string name="hint_core_name">Name</string>
    <string name="hint_core_address">Address</string>
    <string name="hint_core_port">Port</string>
    <string name="hint_identity_password">Password</string>
    <string name="hint_identity_username">Username</string>
    <string name="hint_drawer_open">Open buffer list</string>
    <string name="hint_drawer_close">Close buffer list</string>
    <string name="hint_select_core">Select Core</string>
    <string name="dialog_title_delete_buffer">Remove buffer permanently?</string>
    <string name="dialog_title_events">Hide Events</string>
    <string name="dialog_title_channel">Join Channel</string>
    <string name="dialog_title_core_add">Add new Core</string>
    <string name="dialog_title_core_edit">Edit Core</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_join">Join</string>
    <string name="dialog_action_save">Save</string>
    <string name="dialog_action_close">Close</string>
    <string name="dialog_action_edit">Edit</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="dialog_message_join_no_channel">No channel selected</string>
    <string name="dialog_message_delete_buffer">Are you sure you want to delete this buffer permanently? This action cannot be undone.</string>
    <string name="checkbox_remember_me">Remember me</string>
    <string name="not_available">Not available now</string>
    <string name="message_ssl_changed">The core SSL certificate has changed, do you trust the new one?</string>
    <string name="message_ssl_new">Received a new SSL certificate, do you trust it?</string>
    <string name="message_too_old_protocol">Protocol version not supported, Quassel core is to old</string>
    <plurals name="notification_x_highlights">
        <item quantity="one">%1$d new highlight</item>
        <item quantity="other">%1$d new highlights</item>
    </plurals>
    <plurals name="notification_on_x_buffers">
        <item quantity="one">%1$d buffer</item>
        <item quantity="other">%1$d buffers</item>
    </plurals>
    <string name="notification_you_have_been_highlighted">You have been highlighted</string>
    <string name="notification_hightlights_on_buffers">%1$s on %2$s</string>
    <string name="notification_connecting">Connecting to core</string>
    <string name="notification_connected">Connected to core</string>
        <string name="preference_initial_backlog_limit" translatable="false">backlogLimit</string>
        <string name="preference_dynamic_backlog" translatable="false">dynamicBacklog</string>
    <string name="preference_fontsize_channel_list">fontsizeChannelList</string>
        <string name="preference_notification_vibrate" translatable="false">notificationvibrate</string>
        <string name="preference_notification_light" translatable="false">notificationlight</string>
        <string name="preference_notification_sound" translatable="false">notificationsound</string>
        <string name="preference_notification_sound_active" translatable="false">notificationsoundactive</string>
        <string name="preference_colored_text" translatable="false">allowcoloredtext</string>
        <string name="preference_theme" translatable="false">selectedtheme</string>
        <string name="preference_notify_connect" translatable="false">notifyconnect</string>
        <string name="preference_notification_sound_file" translatable="false">notificationsoundfile</string>
        <string name="preference_notification_connect_sound_file" translatable="false">notificationconnectsoundfile</string>
        <string name="preference_fetch_to_last_seen" translatable="false">getallunseenbacklog</string>
        <string name="preference_reconnect" translatable="false">reconnect</string>
        <string name="preference_reconnect_periodically" translatable="false">reconnect_periodically</string>
        <string name="preference_reconnect_counter" translatable="false">reconnectCounter</string>
    <string name="preference_reconnect_on_wifi_only">reconnect_on_wifi_only</string>
    <string name="preference_reconnect_on_metered">reconnect_on_metered</string>
    <string name="context_part">Part</string>
    <string name="context_join">Join</string>
    <string name="context_delete">Delete</string>
    <string name="context_hide_temporarily">Hide Temporarily</string>
    <string name="context_hide_permanently">Hide Permanently</string>
    <string name="preference_category_appearance">Appearance</string>
        <string name="preference_dialog_theme">Choose application theme</string>
        <string name="preference_summary_theme">The application theme</string>
        <string name="preference_title_theme">Theme</string>
        <string name="preference_dialog_timestamp">Show Seconds in Timestamp</string>
        <string name="preference_summary_timestamp">When should the Timestamp contain seconds</string>
        <string name="preference_title_timestamp">Timestamp</string>
        <string name="preference_timestamp" translatable="false">timestamp_seconds</string>
        <string name="preference_dialog_fontsize">Choose fontsize for the chat</string>
        <string name="preference_summary_fontsize">The fontsize of the chat</string>
        <string name="preference_title_fontsize">Chat fontsize</string>
        <string name="preference_fontsize" translatable="false">fontsizeChannelList</string>
        <string name="preference_summary_colored_text">Turn on/off support for mirc color coded text</string>
        <string name="preference_title_colored_text">Allow colored text</string>
        <string name="preference_summary_nickbrackets">Display the nick with brackets at each side</string>
        <string name="preference_title_nickbrackets">Show Nicks in classic style</string>
        <string name="preference_nickbrackets" translatable="false">shownickbrackets</string>
        <string name="preference_summary_hostname">Show the User’s nick@host in each server action (kick/join/etc.)</string>
        <string name="preference_title_hostname">Show User Hostnames</string>
        <string name="preference_hostname" translatable="false">detailed_actions</string>
        <string name="preference_summary_lag">Show latency between the client and the Core</string>
        <string name="preference_title_lag">Show Lag</string>
        <string name="preference_lag" translatable="false">showlag</string>
    <string name="preference_category_connection">Connection</string>
        <string name="preference_summary_fetch_to_last_seen">Fetch all unseen messages on connect. This can take a very long time!</string>
        <string name="preference_title_fetch_to_last_seen">Unread messages per chat</string>
        <string name="preference_summary_initial_backlog_limit">How many lines to fetch on connect</string>
        <string name="preference_title_initial_backlog_limit">Initial backlog amount</string>
        <string name="preference_summary_dynamic_backlog">How many lines to fetch on scroll</string>
        <string name="preference_title_dynamic_backlog">Dynamic backlog amount</string>
        <string name="preference_wake_lock" translatable="false">wakelock</string>
    <string name="preference_category_reconnect">Automatic Reconnect</string>
        <string name="preference_summary_reconnect">Reconnect, when connection is lost</string>
        <string name="preference_title_reconnect">Reconnect</string>
        <string name="preference_summary_reconnect_wifi">Reconnect only if wifi is available</string>
        <string name="preference_title_wifi">Reconnect with wifi only</string>
        <string name="preference_reconnect_wifi" translatable="false">reconnect_on_wifi_only</string>
        <string name="preference_summary_metered">Allow reconnect while connected to a mobile WiFi hotspot.</string>
        <string name="preference_title_metered">Reconnect on metered wifi connection</string>
        <string name="preference_reconnect_metered" translatable="false">reconnect_on_metered</string>
        <string name="preference_summary_reconnect_periodically">Normally Quassel reconnects only if your phone’s connection breaks down. Try this option if your disconnects are caused by the core restarting or the core losing connection</string>
        <string name="preference_title_reconnect_periodically">Reconnect periodically</string>
        <string name="preference_summary_reconnect_counter">How often to retry</string>
        <string name="preference_title_reconnect_counter">Reconnect counter</string>
    <string name="preference_category_notifications">Notifications</string>
        <string name="preference_title_notify_connect">Notify on connect</string>
        <string name="preference_title_notification_vibrate">Vibrate on notification</string>
        <string name="preference_title_notification_light">Use light on notification</string>
        <string name="preference_title_notification_sound">Play sound on notification</string>
        <string name="preference_title_notification_sound_active">Sound only when unfocused</string>
        <string name="preference_title_notification_sound_file">Notification sound</string>
        <string name="preference_title_notification_connect_sound_file">Connection sound</string>
</resources>