<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Backlog Fetching">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_fetch_to_last_seen"
            android:summary="Fetch all unseen messages on connect. This can take a very long time!"
            android:title="Unread messages per chat"
            android:disableDependentsState="true" />

        <EditTextPreference
            android:defaultValue="10"
            android:key="@string/preference_initial_backlog_limit"
            android:numeric="integer"
            android:summary="How many lines to fetch on connect"
            android:title="Initial backlog amount"
            android:dependency="@string/preference_fetch_to_last_seen" />

        <EditTextPreference
            android:defaultValue="20"
            android:key="@string/preference_dynamic_backlog"
            android:numeric="integer"
            android:summary="How many lines to fetch on scroll"
            android:title="Dynamic backlog amount" />
    </PreferenceCategory>
    >

    <PreferenceCategory android:title="Quassel">

        <ListPreference
            android:defaultValue="20"
            android:dialogTitle="Choose fontsize for the bufferlist"
            android:entries="@array/entries_fontsize_preference"
            android:entryValues="@array/entryvalues_fontsize_preference"
            android:key="@string/preference_fontsize_channel_list"
            android:summary="The fontsize of the bufferlist"
            android:title="Bufferlist fontsize" />

        <ListPreference
            android:defaultValue="light"
            android:dialogTitle="Choose application theme"
            android:entries="@array/entries_theme_preference"
            android:entryValues="@array/entryvalues_theme_preference"
            android:key="@string/preference_theme"
            android:summary="The application theme"
            android:title="Theme" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_colored_text"
            android:summary="Turn on/off support for mirc color coded text"
            android:title="Allow colored text" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_show_lag"
            android:summary="Show the core latency"
            android:title="Show Lag" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_wake_lock"
            android:summary="Use more battery when you turn off the screen, to keep connections alive"
            android:title="Use a wake-lock to inhibit sleep" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Reconnection" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_reconnect"
            android:summary="Reconnect, when connection is lost"
            android:title="Reconnect"
            android:disableDependentsState="false"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_reconnect_on_wifi_only"
            android:summary="Reconnect only if wifi is available"
            android:title="Reconnect with wifi only"
            android:dependency="@string/preference_reconnect" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_reconnect_on_metered"
            android:summary="Reconnect, when on a metered connection. A connection is classified as
metered, when it is sensitive to heavy data usage. For example, tethering connections can be
classified as metered by the user."
            android:title="Reconnect on metered wifi connection"
            android:dependency="@string/preference_reconnect_on_wifi_only"
            />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_reconnect_periodically"
            android:summary="Normally, Quasseldroid reconnects, when the lost network connection is
reestablished. Try this option, if the standard reconnection functionality isn't working for you,
because your connection is lost by restarts of the core, a temporarily unreachable core, etc. With
this option, Quasseldroid tries to reconnect periodically in an increasing interval."
            android:title="Reconnect periodically"
            android:dependency="@string/preference_reconnect"
            />
        <EditTextPreference
            android:defaultValue="10"
            android:key="@string/preference_reconnect_counter"
            android:numeric="integer"
            android:summary="How often to retry"
            android:title="Reconnect counter"
            android:dependency="@string/preference_reconnect_periodically"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_notify_connect"
            android:summary=""
            android:title="Notify on connect" />

        <CheckBoxPreference
            android:key="@string/preference_notification_vibrate"
            android:summary=""
            android:title="Vibrate on notification" />

        <CheckBoxPreference
            android:key="@string/preference_notification_light"
            android:summary=""
            android:title="Use light on notification" />

        <CheckBoxPreference
            android:key="@string/preference_notification_sound"
            android:summary=""
            android:title="Play sound on notification" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_notification_sound_active"
            android:summary=""
            android:title="Sound only when unfocused" />

        <RingtonePreference
            android:key="@string/preference_notification_sound_file"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="Notification sound"></RingtonePreference>

        <RingtonePreference
            android:key="@string/preference_notification_connect_sound_file"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="Connection sound"></RingtonePreference>
    </PreferenceCategory>

</PreferenceScreen>