<?xml version="1.0" encoding="utf-8"?>
<!--
    QuasselDroid - Quassel client for Android
    Copyright (C) 2015 Ken Børge Viktil
    Copyright (C) 2015 Magnus Fjell
    Copyright (C) 2015 Martin Sandsmark <martin.sandsmark@kde.org>

    This program is free software: you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the Free
    Software Foundation, either version 3 of the License, or (at your option)
    any later version, or under the terms of the GNU Lesser General Public
    License as published by the Free Software Foundation; either version 2.1 of
    the License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License and the
    GNU Lesser General Public License along with this program.  If not, see
    <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/context_menu_part"
        android:title="@string/action_part"
        android:orderInCategory="1"
        android:alphabeticShortcut="w"/>
    <item
        android:id="@+id/context_menu_join"
        android:title="@string/action_join"
        android:orderInCategory="2"
        android:alphabeticShortcut="n"/>
    <item
        android:id="@+id/context_menu_unhide"
        android:title="@string/action_unhide"
        android:orderInCategory="3"/>
    <item android:id="@+id/context_menu_delete"
        android:title="@string/action_delete"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/context_menu_hide_temp"
        android:title="@string/action_hide_temp"
        android:orderInCategory="5"/>
    <item
        android:id="@+id/context_menu_hide_perm"
        android:title="@string/action_hide_perm"
        android:orderInCategory="6"/>
</menu>
