<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dip">

    <EditText
        android:id="@+id/dialog_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_core_name"
        android:singleLine="true" />

<<<<<<< HEAD
    <EditText
        android:id="@+id/dialog_address_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/hint_core_address"
        android:singleLine="true" />
=======
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:singleLine="true"
                    android:text="Server port" />

                <EditText
                    android:id="@+id/dialog_port_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:inputType="number"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:text="4242" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
>>>>>>> Updated UI

    <EditText
        android:id="@+id/dialog_port_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="5"
        android:singleLine="true"
        android:hint="@string/hint_core_port"
        android:text="@string/default_port" />
</LinearLayout>